--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Educator JS Codespace Template",
   "source": "src/index.html",
-  "homepage": "https://sadly.link.github.io/portfolio-template",
+  "homepage": "https://sadlylink.github.io/portfolio-template",
   "scripts": {
     "start": "parcel",
     "build": "parcel build",
